config-root/namespaces/myapps/node-example/node-example-svc.yaml
# Source: node-example/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-example
  labels:
    chart: "node-example-0.0.7"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'node-example'
  namespace: myapps
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: node-example-node-example
