config-root/namespaces/myapps/node-example/node-example-ingress.yaml
# Source: node-example/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'node-example'
  name: node-example
  namespace: myapps
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: node-example
              servicePort: 80
      host: node-example-myapps.34.118.108.125.nip.io
